Added the ability to do a GenerateDictionary call using the special input files. THis had to be driven all the way through. :(

--- a/LINQToTTree/TTreeDataModel/TTreeDataModel.csproj
+++ b/LINQToTTree/TTreeDataModel/TTreeDataModel.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrayGroup.cs" />
+    <Compile Include="ClassForDictionary.cs" />
     <Compile Include="IClassItem.cs" />
     <Compile Include="ItemROOTClass.cs" />
     <Compile Include="ItemSimpleType.cs" />
