Move the test to track the location of the source.

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -266,7 +266,7 @@
     </Compile>
     <Compile Include="Expressions\t_ArrayExpressionParser.cs" />
     <Compile Include="Expressions\t_ArrayInfoVector.cs" />
-    <Compile Include="t_TranslatingExpressionVisitor.cs" />
+    <Compile Include="Expressions\t_TranslatingExpressionVisitor.cs" />
     <Compile Include="t_TypeDefTranslator.cs" />
     <Compile Include="VariableSaveManagers.cs" />
     <Compile Include="Variables\Savers\SaveVarObjectTest.cs" />
