--- a/DemosAndTests/DemoJetShapes/DemoJetShapes.csproj
+++ b/DemosAndTests/DemoJetShapes/DemoJetShapes.csproj
@@ -49,6 +49,9 @@
     <Reference Include="libRIOWrapper, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\..\..\..\..\..\..\..\root\NETWrappers\lib\libRIOWrapper.dll</HintPath>
     </Reference>
+    <Reference Include="LinqToTTreeInterfacesLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\LINQToTTree\LinqToTTreeInterfacesLib\bin\Debug\LinqToTTreeInterfacesLib.dll</HintPath>
+    </Reference>
     <Reference Include="LINQToTTreeLib">
       <HintPath>..\..\LINQToTTree\LINQToTTreeLib\bin\Debug\LINQToTTreeLib.dll</HintPath>
       <Private>True</Private>
