Add reference to a file.

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -111,6 +111,7 @@
     <Compile Include="TypeHandlers\ROOT\TypeHandlerROOT.cs" />
     <Compile Include="TypeHandlers\TranslationTypes\TypeHandlerTranslationClass.cs" />
     <Compile Include="TypeHandlers\TypeHandlerCache.cs" />
+    <Compile Include="TypeHandlers\TypeHandlerConvert.cs" />
     <Compile Include="TypeHandlers\TypeHandlerHelpers.cs" />
     <Compile Include="Utils\ExpressionUtilities.cs" />
     <Compile Include="Utils\FileUtils.cs" />
