--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -86,6 +86,7 @@
     <Compile Include="CPPTranslator.cs" />
     <Compile Include="Expressions\ArrayExpressionParser.cs" />
     <Compile Include="Expressions\ArrayInfoVector.cs" />
+    <Compile Include="Expressions\ExpressionStringConverter.cs" />
     <Compile Include="Expressions\ParameterReplacementExpressionVisitor.cs" />
     <Compile Include="Expressions\ExpressionToCPP.cs" />
     <Compile Include="GeneratedCode.cs" />
@@ -94,6 +95,7 @@
     <Compile Include="QueriableTTree.cs" />
     <Compile Include="QueryResultCache.cs" />
     <Compile Include="QueryVisitor.cs" />
+    <Compile Include="QueryVisitors\FormattingQueryVisitor.cs" />
     <Compile Include="ResultOperators\ROAggregate.cs" />
     <Compile Include="ResultOperators\ROCount.cs" />
     <Compile Include="ResultOperators\ROFirstLast.cs" />
